# bank-microservices

./: .dockerignore  .env.example  .gitignore  .gitmodules  .prettierignore  .prettierrc.yaml  LICENSE  README  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml  turbo.json
services/: .lintstagedrc.yaml
services/accounts/: Dockerfile  package.json  tsconfig.json
services/accounts/api/v1/: config.ts  index.ts
services/accounts/mongo/: init.sh
services/client/: .eslintrc.js  Dockerfile  next.config.js  package.json  tsconfig.json
services/client/src/app/: globals.css  header.module.css  header.tsx  layout.tsx  page.module.css  page.tsx
services/customers/: Dockerfile  foundry.toml  hardhat.config.ts  package.json  start.sh  tsconfig.json
services/customers/api/v1/: config.ts  index.ts
services/customers/contracts/src/: CustomerManager.sol
services/customers/mongo/: init.sh
services/customers/subgraph/: schema.graphql
services/customers/subgraph/scripts/: index.ts
services/customers/tasks/: setState.ts
services/graph-node/: package.json
services/loans/: Dockerfile  package.json  remappings.txt  start.sh  tsconfig.json
services/loans-model/: Dockerfile  app.py  dump_model.py  loans_default.ipynb  package.json  pyproject.toml
services/loans-model/utils/: __init__.py  model.py  preprocessing.py
services/loans/api/v1/: config.ts  (+1 more)
services/loans/mongo/: init.sh
services/loans/subgraph/: .eslintrc.js  schema.graphql
services/loans/tasks/: setState.ts
services/requests/: Dockerfile  package.json
services/requests/mongo/: init.sh
(+178 files in other folders)
