[tool.poetry]
name = "loans-model"
version = "0.1.0"
description = ""
authors = ["Alberto Bas"]
license = "MIT"
readme = "README.md"
packages = [{include = "loans-model"}]

[tool.poetry.dependencies]
python = "3.11.3"
flask = "^2.3.2"
numpy = "^1.24.3"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
torch = "^2.0.1"
skorch = "^0.13.0"
flask-cors = "^3.0.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
